<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:alpha="@android:integer/config_longAnimTime">
    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_margin="@dimen/_10sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:background="#fff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                app:srcCompat="@mipmap/ic_launcher_round"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:text="@string/popup_info"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="left"
            android:text="@string/v_two"
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="left"
            android:text="@string/v_three"
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="left"
            android:text="@string/v4"
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="left"
            android:text="@string/v5"
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="left"
            android:text="@string/v7"
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"/>
    </LinearLayout>
    
</androidx.cardview.widget.CardView>

</RelativeLayout>